# Cognitive-modeling

./: README.md  eval_with_plot.ipynb  gitignore.txt  ibl_and_pt_re_parallel.py  pyproject.toml  requirements.txt
configs/: default.yaml
repeated/: IBLPT_v1.py  IBL_v2.py  human_metrc.py
repeated/data/: model_ibl_ararte.csv
scripts/: cli.py  demo.py  evaluate.py  fit.py  main_optimization.py  plot_r_rate.py  test_refactored.py
src/iblpt/: config.py  metrics.py  optimize.py  plotting.py  simulate.py
src/iblpt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/iblpt/agents/: ibl.py  pt_ibl.py
src/iblpt/data/: loader.py
src/iblpt/human/: metrics.py
